@@ -29,6 +29,9 @@ Version 3.14-858
 
 - Added option --wide-display to command "tsanalyze" and plugin "analyze".
 
+- Bug fix in plugin "merge": Merging CAT's from two streams was incorrect
+  (incorrect PID conflict detection and endless code loop).
+
 - Bug fix on Windows: "tslsdvb" and "tshides" could crash when using a HiDes
   UT-100A (combined received / modulator).
 
